--- a/index.html
+++ b/index.html
@@ -44,21 +44,47 @@
                         <img class="uparrowimg menustandard" src="Assets/Group 10.png">
                     </div>
 
-                    <div class="wheel1 col2">
-                        <img class="wheel1img wheelstandard" src="img/EnkeiGTC02SilverGC.png">
-                    </div>
+                    <div class="carousel-container">
+                            <div class="track">
 
-                    <div class="wheel2 col2">
-                        <img class="wheel2img wheelstandard" src="img/WorkMeisterL1GunmetalGC.png">
-                    </div>
+                                    <img class="wheel1img wheelstandard" src="img/EnkeiGTC02SilverGC.png">
 
-                    <div class="wheel3 col2">
-                        <img class="wheel3img wheelstandard" src="img/3SDM005MachinedGC.png">
-                    </div>
 
-                    <div class="wheel4 col2">
-                        <img class="wheel4img wheelstandard" src="img/EnkeiTM7GreyGC.png">
-                    </div>
+
+                                    <img class="wheel2img wheelstandard" src="img/WorkMeisterL1GunmetalGC.png">
+
+
+                                    <img class="wheel3img wheelstandard" src="img/3SDM005MachinedGC.png">
+
+
+                                    <img class="wheel4img wheelstandard" src="img/EnkeiTM7GreyGC.png">
+
+
+                                    <img class="wheel4img wheelstandard" src="img/EnkeiTM7BlackGC.png">
+
+
+                                    <img class="wheel5img wheelstandard" src="img/EnkeiRPF1BlackChromeGC.png">
+
+
+                                    <img class="wheel5img wheelstandard" src="img/EnkeiRPF1GoldGC.png">
+
+
+                                    <img class="wheel5img wheelstandard" src="img/EnkeiRPF1SilverGC.png">
+
+
+                                    <img class="wheel6img wheelstandard" src="img/RaysTE37Gravel2GC.png">
+
+
+                                    <img class="wheel7img wheelstandard" src="img/VolkG16GC.png">
+
+
+                                    <img class="wheel8img wheelstandard" src="img/WorkCRKiwamiBlack.png">
+
+
+                                    <img class="wheel8img wheelstandard" src="img/WorkCRKiwamiSilverGC.png">
+
+                            </div>
+                        </div>
 
                     <div class="downarrow col2">
                         <img class="downarrowimg menustandard" src="Assets/Group 11.png">
@@ -67,7 +93,10 @@
 
                     
                     <div class="carimage">
-
+                        <div class="displayed-wheels">
+                            <img class="front-wheel" src="img/WorkMeisterL1GunmetalGC.png">
+                            <img class="rear-wheel" src="img/WorkMeisterL1GunmetalGC.png">
+                    </div>
                     </div>
 
 
@@ -81,3 +110,4 @@
 
 
     </body>
+    <script src="index.js"></script>
