--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                     <div class="carousel-container">
                             <div class="track">
-
+                                <div class="wheelscroll">
                                     <img class="wheel1img wheelstandard" src="img/EnkeiGTC02SilverGC.png">
 
 
@@ -57,8 +57,8 @@
 
 
                                     <img class="wheel4img wheelstandard" src="img/EnkeiTM7GreyGC.png">
-
-
+                                </div>
+                                <div class="wheelscroll">
                                     <img class="wheel4img wheelstandard" src="img/EnkeiTM7BlackGC.png">
 
 
@@ -69,8 +69,8 @@
 
 
                                     <img class="wheel5img wheelstandard" src="img/EnkeiRPF1SilverGC.png">
-
-
+                                </div>
+                                <div class="wheelscroll">
                                     <img class="wheel6img wheelstandard" src="img/RaysTE37Gravel2GC.png">
 
 
@@ -81,7 +81,7 @@
 
 
                                     <img class="wheel8img wheelstandard" src="img/WorkCRKiwamiSilverGC.png">
-
+                                </div>
                             </div>
                         </div>
 
