Background changes on wheel click

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
 
-    <body>
+    <body onclick="printID(this.id);">
 
         <section class="grid">
             
@@ -47,40 +47,40 @@
                     <div class="carousel-container">
                             <div class="track">
                                 <div class="wheelscroll">
-                                    <img class="wheel1img wheelstandard" src="img/EnkeiGTC02SilverGC.png">
+                                    <img id="wheel1img" class="wheelstandard" src="img/EnkeiGTC02SilverGC.png">
 
 
-                                    <img class="wheel2img wheelstandard" src="img/WorkMeisterL1GunmetalGC.png">
+                                    <img id="wheel2img" class="wheelstandard" src="img/WorkMeisterL1GunmetalGC.png">
 
 
-                                    <img class="wheel3img wheelstandard" src="img/3SDM005MachinedGC.png">
+                                    <img id="wheel3img" class="wheelstandard" src="img/3SDM005MachinedGC.png">
 
 
-                                    <img class="wheel4img wheelstandard" src="img/EnkeiTM7GreyGC.png">
+                                    <img id="wheel4img" class="wheelstandard" src="img/EnkeiTM7GreyGC.png">
                                 </div>
                                 <div class="wheelscroll">
-                                    <img class="wheel4img wheelstandard" src="img/EnkeiTM7BlackGC.png">
+                                    <img id="wheel5img" class="wheelstandard" src="img/EnkeiTM7BlackGC.png">
 
 
-                                    <img class="wheel5img wheelstandard" src="img/EnkeiRPF1BlackChromeGC.png">
+                                    <img id="wheel6img" class="wheelstandard" src="img/EnkeiRPF1BlackChromeGC.png">
 
 
-                                    <img class="wheel5img wheelstandard" src="img/EnkeiRPF1GoldGC.png">
+                                    <img id="wheel7img" class="wheelstandard" src="img/EnkeiRPF1GoldGC.png">
 
 
-                                    <img class="wheel5img wheelstandard" src="img/EnkeiRPF1SilverGC.png">
+                                    <img id="wheel8img" class="wheelstandard" src="img/EnkeiRPF1SilverGC.png">
                                 </div>
                                 <div class="wheelscroll">
-                                    <img class="wheel6img wheelstandard" src="img/RaysTE37Gravel2GC.png">
+                                    <img id="wheel9img" class="wheelstandard" src="img/RaysTE37Gravel2GC.png">
 
 
-                                    <img class="wheel7img wheelstandard" src="img/VolkG16GC.png">
+                                    <img id="wheel10img" class="wheelstandard" src="img/VolkG16GC.png">
 
 
-                                    <img class="wheel8img wheelstandard" src="img/WorkCRKiwamiBlack.png">
+                                    <img id="wheel11img" class="wheelstandard" src="img/WorkCRKiwamiBlack.png">
 
 
-                                    <img class="wheel8img wheelstandard" src="img/WorkCRKiwamiSilverGC.png">
+                                    <img id="wheel12img" class="wheelstandard" src="img/WorkCRKiwamiSilverGC.png">
                                 </div>
                             </div>
                         </div>
