Added wheel objects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width">
     </head>
 
-
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <body onclick="printID(this.id);">
 
         <section class="grid">
@@ -14,7 +14,7 @@
                     <div class=" backbutton col1">
                         <img class="backbuttonimg menustandard" src="Assets/Subtraction 3.png">
                     </div>
-                    <div class="logo col1">
+                    <div class="logo col1 w3-animate-opacity">
                         <img class="logoimg menustandard" src="Assets/Wheel Vision Logo1.png">
                     </div>
                     <div class="wheelicon col1">
@@ -45,7 +45,7 @@
                     </div>
 
                     <div class="carousel-container">
-                            <div class="track">
+                            <div class="track"> 
                                 <div class="wheelscroll">
                                     <img id="wheel1img" class="wheelstandard" src="img/EnkeiGTC02SilverGC.png">
 
@@ -91,7 +91,7 @@
                     
 
                     
-                    <div class="carimage">
+                    <div class="carimage w3-animate-opacity">
                         <div class="displayed-wheels">
                             <img class="front-wheel" src="img/WorkMeisterL1GunmetalGC.png">
                             <img class="rear-wheel" src="img/WorkMeisterL1GunmetalGC.png">
