Sidebar wheels added using JS rather than HTML

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     </div>
 
                     <div class="carousel-container">
-                            <div class="track"> 
-                                <div class="wheelscroll">
-                                    <img id="wheel1img" class="wheelstandard" src="img/EnkeiGTC02SilverGC.png">
+                            <div id="track"> 
+
+                                  <!-- <img id="wheel1img" class="wheelstandard" src="img/EnkeiGTC02SilverGC.png">
 
 
                                     <img id="wheel2img" class="wheelstandard" src="img/WorkMeisterL1GunmetalGC.png">
@@ -57,8 +57,8 @@
 
 
                                     <img id="wheel4img" class="wheelstandard" src="img/EnkeiTM7GreyGC.png">
-                                </div>
-                                <div class="wheelscroll">
+
+
                                     <img id="wheel5img" class="wheelstandard" src="img/EnkeiTM7BlackGC.png">
 
 
@@ -69,8 +69,8 @@
 
 
                                     <img id="wheel8img" class="wheelstandard" src="img/EnkeiRPF1SilverGC.png">
-                                </div>
-                                <div class="wheelscroll">
+
+
                                     <img id="wheel9img" class="wheelstandard" src="img/RaysTE37Gravel2GC.png">
 
 
@@ -81,9 +81,10 @@
 
 
                                     <img id="wheel12img" class="wheelstandard" src="img/WorkCRKiwamiSilverGC.png">
-                                </div>
+                                  -->
                             </div>
-                        </div>
+                    </div>
+
 
                     <div class="downarrow col2">
                         <img class="downarrowimg menustandard" src="Assets/Group 11.png">
