--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <body onclick="printID(this.id);"  onload = "loadRemove()">
-
+    <body  onload = "loadRemove()">
+       <!-- onclick="printID(this.id);"-->
         <section class="grid">
             
                 <!--COL 1-->
