added onclick() to each loop element, and added loading wheel between wheel selections

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 
                     
                     <div class="carimage">
-                        <div class="loading">
-
+                        <div class="loading" onload = "loadRemove()">
                         </div>
                         <div class="displayed-wheels">
                             <img class="front-wheel" src="img/WorkMeisterL1GunmetalGC.png">
