--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <link rel="stylesheet" type="text/css" href="projectstyles.css">
         <meta name="viewport" content="width=device-width">
+        <meta property="og:title" content="Wheel Vision">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="img/Ogimage.jpg">
+        <meta property="og:url" content="https://cahill-99.github.io/wheel-vision/">
     </head>
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
