--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width">
         <meta property="og:title" content="Wheel Vision">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="img/Ogimage.jpg">
+        <meta property="og:image" content="https://cahill-99.github.io/wheel-vision/img/Ogimage.jpg">
         <meta property="og:url" content="https://cahill-99.github.io/wheel-vision/">
     </head>
 
