--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta property="og:type" content="website">
         <meta property="og:image" content="img/Ogimage.jpg">
         <meta property="og:url" content="https://cahill-99.github.io/wheel-vision/">
+        <meta property="og:description" content="A website to cycle through different wheels, and help you choose what type would look best on your car!">
     </head>
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
