prep for reset button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <img class="wheeliconimg menustandard" src="Assets/Group 28.png">
                     </div>
                     <div class="filtericon col1">
-                        <img class="filtericonimg menustandard" src="Assets/Group 25.png">
+                        <img class="middlebuttonimg menustandard" src="Assets/Group 25.png">
                     </div>
                     <div class="calipericon col1">
                         <img class="calipericonimg menustandard" src="Assets/Group 29.png">
