media query for orientation

--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
 
         </section>
 
-
+        <section class ="mobile-message">
+            <div class = "popup">
+                <h1>Landscape Orientation Only</h1>
+                <div class = "phone-container">
+                    <img class = "turnphoneimg" src="Assets/Turn Phone icon.png">
+                </div>
+                <p class = "infotext">Please turn your device</p>
+            </div>
+        </section>
 
 
     </body>
