--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                 <div class = "phone-container">
                     <img class = "turnphoneimg" src="Assets/Turn Phone icon.png">
                 </div>
-                <p class = "infotext">Please turn your device</p>
+                <p class = "infotext">Please turn your device.</p>
+                <p class = "infotext">Notice: mobile version still under construction</p>
             </div>
         </section>
 
